chore(build): 更新项目版本和构建插件配置
- 将项目版本从 2.3.x.20260605-SNAPSHOT 更新到 2.3.x.20260615-SNAPSHOT
- 启用单元测试执行，将 skip 和 skipTests 设置为 false
- 移除过时的 JVM 参数配置，保留内存和编码设置
- 升级 maven-compiler-plugin 从 3.7.0 到 3.13.0
- 升级 maven-surefire-plugin 从 2.22.1 到 3.2.5